Version 3.9.26
- Added DEF FNA(X)=X form to BASIC

Version 3.9.25
- Unrolled LMM loop some more, for about a 10% performance improvement on code outside of fcache.
- Added --lmm=xxx flag to change LMM interpreter (for test purposes only, really; the default (`orig`) LMM is the best one)
- Changed runtime support code to avoid using CNT shadow register (for GEAR emulator compatibility)
- Added warnings for missing # on jumps
- Fixed scaling of LOC instruction when running in COG mode
- Put spaces between bytes in .lst files.
- Made preprocessor directives like "#define" case-insensitive in Spin and BASIC
- Allow multi-dimensional dim in BASIC
- Add ON x GOTO to BASIC
- Change BASIC number reading code to ignore leading spaces
- Added include/classic.bi, a header file to make porting classic basic games easier.
- Fixed using string initializers for arrays.
- Accept old-style C function declarations
- Accept .a as an extension for C code; this allows us to create a "library" containing a bunch of C declarations with __fromfile() notation to find the implementations.

Version 3.9.24
- Fixed a crash when enums are declared in structs
- On P2 use --fcache=240 when -O2 is passed
- Automatically search for .spin2 extensions first, then .spin ones in Spin OBJ blocks if no explicit file name extension is given.
- Suppress some spurious warnings about orgh in listing files
- Fixed a Spin problem with function calls inside method reference lookups
- Fixed a problem where constant references within strings were evaluated in the wrong context
- Allow Spin code to use any variable as an array

Version 3.9.23
- Caught some cases where function redefinitions were not flagged as errors
- Fixed an optimizer crash when inlining functions containing REP
- Fixed rep count calculation when an augment is needed for large immediate repetitions
- Implemented work-around in CLKSET for RCFAST setting issue
- Allow fcache on P2; must be explicitly enabled though